--- a/index.html
+++ b/index.html
@@ -181,6 +181,37 @@
     .audio-player:hover {
       opacity: 1;
     }
+    .future-moments {
+      margin: 2em auto;
+      padding: 2em;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.1);
+    }
+    .future-moments-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2em;
+      max-width: 1200px;
+      margin: 2em auto;
+    }
+    .future-moments img {
+      width: 100%;
+      max-height: 500px;
+      object-fit: contain;
+      border-radius: 15px;
+      border: 3px solid rgba(255, 255, 255, 0.3);
+      transition: all 0.4s ease;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.05);
+      padding: 15px;
+    }
+    .future-moments img:hover {
+      transform: translateY(-5px) scale(1.02);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+      border-color: rgba(255, 255, 255, 0.5);
+    }
   </style>
   <script>
     window.onload = function() {
@@ -253,6 +284,14 @@
         <img src="images/image2.png" alt="זיכרון 2">
         <img src="images/image3.png" alt="זיכרון 3">
         <img src="images/image4.png" alt="זיכרון 4">
+      </div>
+    </section>
+
+    <section class="future-moments">
+      <h2>הרגעים שיהיו... 💫</h2>
+      <div class="future-moments-grid">
+        <img src="images/image5.png" alt="חלום עתידי 1">
+        <img src="images/image6.png" alt="חלום עתידי 2">
       </div>
     </section>
 
