--- a/index.html
+++ b/index.html
@@ -212,6 +212,69 @@
       box-shadow: 0 15px 35px rgba(0,0,0,0.2);
       border-color: rgba(255, 255, 255, 0.5);
     }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      z-index: 2000;
+      backdrop-filter: blur(8px);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+    .modal.show {
+      display: flex;
+      opacity: 1;
+    }
+    .modal-content {
+      margin: auto;
+      max-width: 90%;
+      max-height: 90vh;
+      position: relative;
+    }
+    .modal-content img {
+      max-width: 100%;
+      max-height: 90vh;
+      object-fit: contain;
+      border-radius: 20px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+    }
+    .close-modal {
+      position: absolute;
+      top: -40px;
+      right: 0;
+      color: white;
+      font-size: 24px;
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 10px;
+      transition: transform 0.3s ease;
+    }
+    .close-modal:hover {
+      transform: scale(1.2);
+    }
+    .surprise-button {
+      display: block;
+      margin: 2em auto;
+      padding: 15px 30px;
+      background: linear-gradient(135deg, #ff69b4, #ffb86c);
+      color: white;
+      border: none;
+      border-radius: 25px;
+      font-family: 'Varela Round', sans-serif;
+      font-size: 1.2em;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
+    .surprise-button:hover {
+      transform: translateY(-3px) scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
   </style>
   <script>
     window.onload = function() {
@@ -262,6 +325,31 @@
         origin: { y: 0.6 },
         colors: ['#ff69b4', '#ffb86c', '#ff69b4', '#fff']
       });
+
+      // Modal functionality
+      const modal = document.getElementById('bonus-modal');
+      const surpriseBtn = document.getElementById('surprise-btn');
+      const closeBtn = document.querySelector('.close-modal');
+
+      surpriseBtn.onclick = function() {
+        modal.classList.add('show');
+        confetti({
+          particleCount: 100,
+          spread: 70,
+          origin: { y: 0.6 },
+          colors: ['#ff69b4', '#ffb86c', '#ff69b4', '#fff']
+        });
+      }
+
+      closeBtn.onclick = function() {
+        modal.classList.remove('show');
+      }
+
+      modal.onclick = function(e) {
+        if (e.target === modal) {
+          modal.classList.remove('show');
+        }
+      }
     };
   </script>
 </head>
@@ -278,7 +366,7 @@
     </header>
 
     <section class="gallery">
-      <h2>הרגעים שלנו.... סין בקרוב</h2>
+      <h2>הרגעים שלנו...</h2>
       <div class="gallery-grid">
         <img src="images/image1.png" alt="זיכרון 1">
         <img src="images/image2.png" alt="זיכרון 2">
@@ -291,7 +379,7 @@
       <h2>מכתב לגברת</h2>
       <p>
         לגברת שאני הכי אוהב,<br>
-        איזה התינוקואה הכי יפה (אני המצאתי את הכינוי)<br>
+        את התינוקואה הכי יפה (אני המצאתי את הכינוי)<br>
         לחגיגת ה-31 שלך במסעדת "משייה" היום בערב, ולעוד המון הרגעים הזוהרים שנחווה יחד 💃🕺<br>
         באהבה,<br>
         בוביטו 💌
@@ -304,7 +392,15 @@
         <img src="images/image5.png" alt="חלום עתידי 1">
         <img src="images/image6.png" alt="חלום עתידי 2">
       </div>
+      <button id="surprise-btn" class="surprise-button">✨ הפתעה! ✨</button>
     </section>
+
+    <div id="bonus-modal" class="modal">
+      <div class="modal-content">
+        <button class="close-modal">✕</button>
+        <img src="images/bonus.png" alt="הפתעה מיוחדת">
+      </div>
+    </div>
 
     <footer>
       תנוק | יום הולדת שמח ❤️
