Updated letter text

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
       <p>
         לגברת שאני הכי אוהב,<br>
         את התינוקואה הכי יפה (אני המצאתי את הכינוי)<br>
-        לחגיגת ה-31 שלך במסעדת "משייה" היום בערב, ולעוד המון הרגעים הזוהרים שנחווה יחד 💃🕺<br>
+        לחיי חגיגת ה-31 שלך במסעדת "משייה" היום בערב, ולעוד המון רגעים זוהרים שנחווה יחד 💃🕺<br>
         באהבה,<br>
         בוביטו 💌
       </p>
